SFDCProject/src/objects/Asset_Activity__c.object
<CustomObject>
    <description>Track the lifecycle of Assets.</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Asset Activities</relationshipLabel>
        <relationshipName>Asset_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meter_Registration_Conf__c</fullName>
        <label>Meter Registration Conf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Registration_Date__c</fullName>
        <label>Meter Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Sent__c</fullName>
        <label>Meter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Construction Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1 Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2 Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M3 Proof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Store the various activity types</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset Activity</label>
    <nameField>
        <displayFormat>AA{00000000}</displayFormat>
        <label>Asset Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>